updated video transcript text and fixed spacing between sections

--- a/src/static/less/pages/learn-more.less
+++ b/src/static/less/pages/learn-more.less
@@ -14,6 +14,10 @@
     .avenir-next-demi;
     font-size: 1.5em;
   }
+
+  .background {
+    padding: 1px 15px 0px 15px;
+  }
 }
 
 
@@ -31,18 +35,14 @@
     vertical-align: top;
   }
 
-  ul {
+  .links ul {
     list-style-type: none;
     padding-left: 0;
     margin: 8px 0 0 0;
   }
   
-  li {
+  .links li {
     margin-bottom: 10px;
-  }
-
-  #highlights {
-    margin-top: 80px;
   }
 
   .highlight {
@@ -50,6 +50,7 @@
     padding: 15px 20px;
     width: 66%;
     line-height: 1.375em;
+    margin-bottom: 10px;
   }
 
   #video-transcript {
@@ -65,6 +66,7 @@
   .filter h3 {
     padding:0;
   }
+
 
 }
   
@@ -96,16 +98,25 @@
     margin-bottom: .2em;
     }
 
-  .links {
-    width: 29%;
+   ul {
+    display: inline-block;
+    margin-right: 4%;
+    float: left;
+    margin-bottom: .2em;
+    font-size: 1em;
+    line-height: 1.375em;
+   } 
+
+  .links ul {
     display: inline-block;
     vertical-align: top;
+    list-style-type: none;
+    padding-left: 0;
     }
-    ul {
-      list-style-type: none;
-      padding-left: 0;
-      }
-  }
+    
 
+  
+
+  }
 
 }
